model validate on testing and install rspec

--- a/README.rdoc
+++ b/README.rdoc
@@ -7,3 +7,29 @@ Associations between models
 =================
 rails generate migration create_users {...fill to file...}
 rake db:migrate {...run file migrate...}
+
+=================
+testing specs for recipes:
+name: string
+summary: text
+description: text
+
+- name must be present
+- name must be between 5 characters and less than 100 characters
+- summary must be present
+- summary must be between 10 characters and less than 150 characters
+- description must be present
+- description must be between 20 and 500 characters
+- chef_id must be present
+
+
+=================
+testing specs for chefs:
+chefname: string
+email: string
+
+- chefname must be present
+- chefname must be between 3 characters and less than 40 characters
+- email must be present
+- email must be unique (since we'll use this for logins later)
+- email must be valid
